--- a/front/index.html
+++ b/front/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <div> <a href =#moi>Moi</a> </div>
-    <div> <a href =#cv>CV</a> </div>
+    <div> <a href ="https://drive.google.com/file/d/1n9OPn9PZDrXbHebV9eXkzbEpfKbpzt0-/view?usp=sharing")>CV</a> </div>
     <div> <a href =#skills>Skills</a> </div>
     <div> <a href =#htmltips>HTML CSS JS Tips</a> </div>
 </header>
