--- a/front/index.html
+++ b/front/index.html
@@ -69,6 +69,13 @@
         <div>Copyright Pauline Fouquet</div>
     </footer>
 
+    <div id="feedback">
+        <p>Comment évaluez-vous cette réponse ?</p>
+        <button onclick="sendFeedback('good')">😊</button>
+        <button onclick="sendFeedback('neutral')">😐</button>
+        <button onclick="sendFeedback('bad')">😞</button>
+    </div>
+
     <script src="assets/script.js"></script>
 </body>
 </html>
